# cacheguardian

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: cacheguardian_benchmarks.ipynb
cache_guard/: __init__.py  config.py  types.py
cache_guard/cache/: fingerprint.py  l1.py  l2.py
cache_guard/core/: differ.py  logger.py  metrics.py  optimizer.py  promoter.py  session.py
cache_guard/middleware/: async_interceptor.py  interceptor.py
cache_guard/persistence/: cache_registry.py
cache_guard/providers/: anthropic.py  base.py  gemini.py  openai.py
cacheguardian/: __init__.py  config.py  types.py
cacheguardian/cache/: fingerprint.py  l1.py  l2.py
cacheguardian/core/: advisor.py  differ.py  logger.py  metrics.py  optimizer.py  promoter.py  session.py
cacheguardian/middleware/: async_interceptor.py  interceptor.py
cacheguardian/persistence/: cache_registry.py
cacheguardian/providers/: anthropic.py  base.py  gemini.py  openai.py
tests/: test_advisor.py  test_anthropic.py  test_fingerprint.py  test_gemini.py  test_l1_cache.py  test_live.py  test_metrics.py  test_openai.py  test_promoter.py  test_session.py  test_transforms.py  test_v020_improvements.py
