[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cacheguardian"
version = "0.3.0"
description = "Universal prompt cache optimizer for Anthropic, OpenAI & Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kenny Igbechi", email = "hello@kennyigbechi.com" },
]
keywords = [
    "llm",
    "prompt-caching",
    "anthropic",
    "openai",
    "gemini",
    "cache",
    "optimization",
    "cost-savings",
    "middleware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/kclaka/cacheguardian"
Repository = "https://github.com/kclaka/cacheguardian"
Issues = "https://github.com/kclaka/cacheguardian/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
redis = ["redis>=5.0.0"]
all = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["cacheguardian*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
